# libchromiumcontent

./: .dockerignore  .gclient  .gitattributes  .gitignore  .gitmodules  DEPS  Dockerfile  Jenkinsfile  README.md  VERSION  appveyor-override.yml  appveyor.yml  chromium_content.gyp  chromium_content.gypi  chromiumcontent.gyp  chromiumcontent.gypi  dll_main.cc  gyp-win-tool-wrapper  vsts.yml
.circleci/: config.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  config,yml
chromiumcontent/: BUILD.gn  autofill.gyp  build_libs.py  chromiumcontent.gni  chromiumcontent.gyp  chromiumcontent.gypi  config.gni  empty.cc  extensions.gyp  extensions.gypi  update_client.gyp
chromiumcontent/args/: ffmpeg.gn  native_mksnapshot.gn  shared_library.gn  static_library.gn  tests.gn
chromiumcontent/config/: BUILD.gn  features.gni
patches/: .patches.yaml  001-accelerator.patch  001-build_gn.patch  002-dcheck.patch  003-accelerator.patch  006-blink_file_path.patch  007-blink_local_frame.patch  008-blink_world_context.patch  009-browser_compositor_mac.patch  010-build_gn.patch  011-build_toolchain_win_patch.patch  012-can_create_window.patch  013-compositor_delegate.patch  015-deprecated_register.patch  018-dom_storage_map.patch  019-frame_host_manager.patch  020-guest_view.patch  021-latency_info.patch  022-libgtkui.patch  026-out_of_process_instance.patch  028-render_widget_host_view_base.patch  029-render_widget_host_view_mac.patch  031-scoped_clipboard_writer.patch  033-synthetic_gesture_target_mac.patch  034-thread_capabilities.patch  036-web_contents.patch  039-backport_e8fdb3d.patch  039-work_area_update.patch  040-worker_context_will_destroy.patch  041-gpu_driver_bug_list.patch  042-BUild-gn-with-ninja-build-on-mips64.patch  042-Use-system-ninja-build-instead-of-ninja-in-depot_too.patch  042-high-sierra-nvidia-gpu.patch  042-webui_in_subframes.patch  043-Add-support-for-mips64-with-build-gn.patch  043-cherrypick_f1b7017a.patch  043-fix_rendering_glitches_on_high_sierra.patch  044-Add-mips64el-support-and-loongson3a-for-compiler.patch  044-can_disable_desktop_capture_throttling.patch  044-ignore_unused_local_var.patch  (+177 more)
patches-mas/: .patches.yaml  001-blink_no_private_api.patch  002-no_private_api.patch  004-no-cgdisplayusesforcetogray-cfisobjc.patch  blink_no_private_api.patch  no_private_api.patch  no_qtkit.patch  no_xpc_api.patch
patches-mips64el/: .patches.yaml  002-Add-support-for-mips64-with-build-gn.patch  003-Add-mips64el-support-and-loongson3a-for-compiler.patch  004-Fix-node_modules-uglifyjs-to-uglify-js-on-mips64.patch  007-Add-mips64el-redhat-linux-to-gcc_toolchain-for-mips6.patch  008-Add-mips64-support-for-sysroot.patch  011-No-nss.patch  012-Fix-sqlite-duplicate-symobls.patch
patches-mips64el/v8/: .patches.yaml
patches/common/angle/: .patches.yaml
patches/common/boringssl/: .patches.yaml
patches/common/chromium/: .patches.yaml  accelerator.patch  accessibility_detection.patch  add_netlog_details_for_dhcp-based_wpad.patch  add_realloc.patch  allow_chromiumcontent_to_depend_on_device_service.patch  backport_015a8b82b8e1.patch  backport_11bcab7.patch  backport_1ed08ea9dbb0.patch  backport_3743d0f.patch  backport_4dabe8070550.patch  backport_4dfcf263240a.patch  backport_6c41b439b.patch  backport_97f5f9df6988.patch  backport_e3a883075.patch  backport_ea2ad20b708c.patch  blink_fix_prototype_assert.patch  blink_initialization_order.patch  blink_world_context.patch  build_gn.patch  build_toolchain_win_patch.patch  can_create_window.patch  compositor_delegate.patch  content_browser_manifest.patch  dcheck.patch  devtools_support_loading_externally_generated_traces.patch  disable-redraw-lock.patch  disable_base_computed_style_dcheck.patch  disable_hidden.patch  disable_scroll_begin_dcheck.patch  disable_unittests.patch  disable_user_gesture_requirement_for_beforeunload_dialogs.patch  (+42 more)
patches/v8/: .patches.yaml  001-build_gn.patch  002-build_gn.patch  002-dcheck.patch  003-array_buffer.patch  005-number_parsing.patch  007-Fix-v8-sunspider-1.0.2-some-cases-test-failed-with-u.patch  007-access-info-turbofan-rce.patch  007-backport_f19b889.patch  008-backport_6e9e2e5.patch  008-turn_off_escape_analysis.patch  009-backport_3ecb047.patch  009-backport_bca8409.patch  010-backport_f9c4b7a.patch  011-backport_e020aae394.patch  012-backport_1aead19.patch  012-revert_749b9c06.patch  013-revert_abi_breaking_changes_in_6_1.patch  014-backport_b6158eb6befae.patch  015-backport_9b21865822243.patch  016-backport_0353a1e.patch  017-backport_163d360.patch  018-backport_f4a2b7f3.patch  019-make_tryhandlesignal_available_on_all_posix_platforms.patch  020-backport_b096c44.patch  020-cherry_pick_2c75616.patch  021-cherry_pick_676c413.patch  021-cherry_pick_9b21865822243.patch  022-cherry_pick_e0d64dc.patch  022-fix_potential_segfault.patch  023-backport_0f1dfae.patch  023-backport_b1cd96e.patch  024-cherry_pick_32141e9.patch  025-cherry_pick_2c75616.patch  026-backport_3ecb047.patch  026-cherry_pick_676c413.patch  026-cherry_pick_c690f54d95802.patch  027-backport_a2b91ed.patch  027-cherry_pick_98c40a4bae915.patch  027-cherry_pick_e0d64dc.patch  (+32 more)
script/: .update.swp  README.md  apply-patches  backport-patchset.py  bootstrap  build  build-clang.py  cibuild  cibuild-libchromiumcontent-linux  cibuild-libchromiumcontent-linux-arm  cibuild-libchromiumcontent-linux-arm64  cibuild-libchromiumcontent-linux-ia32  cibuild-libchromiumcontent-linux-mips64el  cibuild-libchromiumcontent-linux-x64  cibuild.ps1  create-dist  disabled-tests.yaml  docker-install-build-deps.sh  download  get-patch  package-clang.py  patch.py  run-gn  run_tests  sccache  setup-circle.sh  update  upload
script/lib/: autofill.py  brave.py  config.py  extensions.py  filesystem.py  git.py  gn.py  ninja.py  patches.py  sccache.py  util.py
script/mips64el/: cross-mips64el  ninja-mips64el  runhooks-mips64el
script/reportbuild/: package-lock.json  package.json  upload-build-results.js
tools/: copy.py  generate_filenames_gypi.py  licenses.py  sccache-build-README.md
tools/linux/: ar-combine.sh
tools/sccache/: README.md
(+44 files in other folders)
