import("//build/config/c++/c++.gni")
import("//build/config/features.gni")
import("//build/split_static_library.gni")
import("//libchromiumcontent/chromiumcontent/config/features.gni")

group("targets") {
  deps = []

  # Build these targets when building libchromiumcontent's
  # "static_library" or "shared_library"
  if (is_electron_build) {
    deps += [
      "//components/prefs",
      "//components/cdm/renderer",
      "//components/cookie_config",
      "//components/pdf/common:interfaces",
      "//components/security_state/content",
      "//components/security_state/core",
      "//components/signin/core/browser:signin_buildflags",
      "//content",
      "//content:sandbox_helper_win",
      "//content/public/app:both",
      "//content/shell:pak",
      "//content/shell:copy_shell_resources",
      "//pdf",
      "//ppapi/cpp",
      "//ppapi/host",
      "//ppapi/proxy",
      "//ppapi/shared_impl",
      "//net:net_with_v8",
      "//third_party/libyuv",
      "//third_party/webrtc/modules/desktop_capture",
      "//third_party/widevine/cdm",
      "//third_party/widevine/cdm:headers",
      "//tools/v8_context_snapshot",
      "//ui/content_accelerators",
      "//ui/display",
      "//ui/display/util",
      "//ui/latency",
      "//ui/views",
      "//ui/views/controls/webview",
    ]

    if (is_linux) {
      deps += [ "//chrome/browser/ui/libgtkui:libgtk3ui" ]
    }

    if (enable_pepper_flash) {
      deps += [ ":pepper_flash" ]
    }

    if (is_component_build) {
      deps += [
        ":desktop_capture",
        ":device_service",
        ":fx_agg",
        ":fx_lcms2",
        ":fx_libopenjpeg",
        ":fx_zlib",
        ":libjpeg",
        ":libyuv",
        ":pdfium_skia_shared",
        ":ppapi_cpp_objects",
        ":ppapi_internal_module",
        ":security_state",
        ":system_wrappers",
        ":viz_service",
        ":webrtc_common",
      ]

      if (is_linux) {
        deps += [ ":libgtkui" ]
      }

      if (is_win) {
        deps += [ ":sandbox_helper_win" ]
      }
    }
  }

  # These produce executables we distribute as part of libchromiumcontent.
  # Statically linked versions of them are built correctly only when the build
  # configuration is not tweaked for the purposes of statically linked
  # Electron.
  if (!is_electron_build || is_component_build) {
    deps += [
      "//chrome/test/chromedriver",
      "//v8",
    ]
  }

  # We build FFMPEG separately in the default non-component configuration
  if (!is_electron_build && !is_component_build) {
    deps += [ "//third_party/ffmpeg" ]
  }
}

if (is_electron_build && is_component_build) {

  # Electron needs some APIs which are not exported from shared libraries
  # produced by a component build. So we put a copy of the needed symbols in
  # this set of static libraries. Most can just depend on the respective
  # source_set target.

  static_library("desktop_capture") {
    complete_static_lib = true
    deps = [ "//third_party/webrtc/modules/desktop_capture" ]
  }

  static_library("device_service") {
    complete_static_lib = true
    public_deps = [ "//services/device:lib" ]
  }

  static_library("fx_agg") {
    complete_static_lib = true
    deps = [ "//third_party/pdfium/third_party:fx_agg" ]
  }

  static_library("fx_lcms2") {
    complete_static_lib = true
    deps = [ "//third_party/pdfium/third_party:fx_lcms2" ]
  }

  static_library("fx_libopenjpeg") {
    complete_static_lib = true
    deps = [ "//third_party/pdfium/third_party:fx_libopenjpeg" ]
  }

  static_library("fx_zlib") {
    complete_static_lib = true
    deps = [ "//third_party/zlib:zlib" ]
  }

  static_library("libjpeg") {
    complete_static_lib = true
    deps = [ "//third_party:jpeg" ]
  }

  static_library("libyuv") {
    complete_static_lib = true
    deps = [ "//third_party/libyuv" ]
  }

  static_library("pdfium_skia_shared") {
    complete_static_lib = true
    deps = [ "//third_party/pdfium/third_party:skia_shared" ]
  }

  static_library("ppapi_cpp_objects") {
    complete_static_lib = true
    deps = [ "//ppapi/cpp:objects" ]
  }

  static_library("ppapi_internal_module") {
    complete_static_lib = true
    deps = [ "//ppapi/cpp/private:internal_module" ]
  }

  static_library("security_state") {
    complete_static_lib = true
    deps = [
      "//components/security_state/content",
      "//components/security_state/core",
    ]
  }

  static_library("system_wrappers") {
    complete_static_lib = true
    deps = [ "//third_party/webrtc/system_wrappers" ]
  }

  static_library("viz_service") {
    complete_static_lib = true
    public_deps = [ "//services/viz:lib" ]
  }

  static_library("webrtc_common") {
    complete_static_lib = true
    deps = [ "//third_party/webrtc:webrtc_common" ]
  }

  if (is_linux) {
    # The original libgtkui target is a shared library, so we must list
    # the object files instead of just depending on it.
    static_library("libgtkui") {
      complete_static_lib = true
      sources = [
        "$root_out_dir/obj/chrome/browser/ui/libgtkui/libgtk3ui/app_indicator_icon.o",
        "$root_out_dir/obj/chrome/browser/ui/libgtkui/libgtk3ui/app_indicator_icon_menu.o",
        "$root_out_dir/obj/chrome/browser/ui/libgtkui/libgtk3ui/gtk_util.o",
        "$root_out_dir/obj/chrome/browser/ui/libgtkui/libgtk3ui/gtk_status_icon.o",
        "$root_out_dir/obj/chrome/browser/ui/libgtkui/libgtk3ui/menu_util.o",
        "$root_out_dir/obj/chrome/browser/ui/libgtkui/libgtk3ui/skia_utils_gtk.o",
        "$root_out_dir/obj/chrome/browser/ui/libgtkui/libgtk3ui/unity_service.o",
      ]
    }
  }

  if (is_win) {
    static_library("sandbox_helper_win") {
      complete_static_lib = true
      deps = [ "//content:sandbox_helper_win" ]
    }
  }
}

if (is_electron_build && !is_component_build) {

  # This is where we build statically linked libchromiumcontent.
  # After all dependent targets are built, we use a script to collect
  # all required object files into an "objects.gni" file and re-run
  # ninja. Because "objects.gni" is a GN input file, it will cause it
  # to re-generate the targets and produce the static libraries we want.

  is_second_pass = (getenv("CHROMIUMCONTENT_2ND_PASS") != "")

  # Make sure the .gni file exists, otherwise it cannot be imported
  if (!is_second_pass) {
    write_file("$target_out_dir/objects.gni", "")
  }

  import("$target_out_dir/objects.gni")

  action("chromiumcontent") {
    outputs = [ "$target_out_dir/build_libs.done" ]

    script = "build_libs.py"
    args = [ "-o", rebase_path("$target_out_dir/objects.gni"),
             "-s", rebase_path(outputs[0]),
             "-t", target_cpu ]

    deps = [ ":targets" ]
  }

  # Normally we would just put everything in a single library plus V8. But
  # toolchains have various limitations that we would hit - e.g. MSVC cannot
  # produce a .lib file bigger than 4 GB, LLVM has a limit on the number of
  # object files on the command line. So we produce multiple libraries.
  group("libs") {
    if (is_second_pass) {
      deps = [
        ":libchromiumcontent",
        ":base",
        ":cc",
        ":components",
        ":ppapi",
        ":media",
        ":net",
        ":services",
        ":skia",
        ":angle",
        ":pdfium",
        ":webkit",
        ":webkitcore",
        ":webkitbindings",
        ":webkitmodules",
        ":webrtc",
        ":v8",
        ":v8base",
      ]
      if (use_custom_libcxx) {
        deps += [ ":libc++" ]
      }
    }
  }

  if (is_second_pass) {
    static_library("libchromiumcontent") {
      complete_static_lib = true
      sources = obj_libchromiumcontent
    }

    static_library("base") {
      complete_static_lib = true
      sources = obj_base
    }

    static_library("cc") {
      complete_static_lib = true
      sources = obj_cc
    }

    static_library("components") {
      complete_static_lib = true
      sources = obj_components
    }

    static_library("ppapi") {
      complete_static_lib = true
      sources = obj_ppapi
    }

    static_library("media") {
      complete_static_lib = true
      sources = obj_media
    }

    static_library("net") {
      complete_static_lib = true
      sources = obj_net
    }

    static_library("services") {
      complete_static_lib = true
      sources = obj_services
    }

    static_library("skia") {
      complete_static_lib = true
      sources = obj_skia
    }

    static_library("angle") {
      complete_static_lib = true
      sources = obj_angle
    }

    static_library("pdfium") {
      complete_static_lib = true
      sources = obj_pdfium
    }

    static_library("webkit") {
      complete_static_lib = true
      sources = obj_webkit
    }

    static_library("webkitbindings") {
      complete_static_lib = true
      sources = obj_webkitbindings
    }

    static_library("webkitcore") {
      complete_static_lib = true
      sources = obj_webkitcore
    }

    static_library("webkitmodules") {
      complete_static_lib = true
      sources = obj_webkitmodules
    }

    static_library("webrtc") {
      complete_static_lib = true
      sources = obj_webrtc
    }

    static_library("v8") {
      complete_static_lib = true
      sources = obj_v8
    }

    split_static_library("v8base") {
      complete_static_lib = true
      sources = obj_v8base
      if (is_win) {
        split_count = 2
      } else {
        split_count = 1
      }
    }

    if (use_custom_libcxx) {
      static_library("libc++") {
        complete_static_lib = true
        sources = []
        if (defined(obj_libcxx)) {
          sources += obj_libcxx
        }
      }
    }
  }

} else {

  group("chromiumcontent") {
    deps = [ ":targets" ]
  }

  group("chromiumcontent_tests") {
    testonly = true

    deps = [
      "//base:base_unittests",
      # "//cc:cc_unittests",
      # "//cc/blink:cc_blink_unittests",
      # "//content/test:content_browsertests",
      # "//content/test:content_unittests",
      # "//crypto:crypto_unittests",
      # "//device:device_unittests",
      # "//gin:gin_unittests",
      # "//gpu:gpu_unittests",
      # "//gpu/ipc/service:gpu_ipc_service_unittests",
      # "//ipc:ipc_tests",
      # "//media:media_unittests",
      # "//media/midi:midi_unittests",
      # "//media/mojo:media_mojo_unittests",
      # "//media/capture:capture_unittests",
      # "//mojo/common:mojo_common_unittests",
      # "//mojo:mojo_unittests",
      # "//net:net_unittests",
      # "//ppapi:ppapi_unittests",
      # "//printing:printing_unittests",
      # "//skia:skia_unittests",
      # "//storage:storage_unittests",
      # "//sql:sql_unittests",
      # "//third_party/angle/src/tests:angle_unittests",
      # "//third_party/leveldatabase:env_chromium_unittests",
      # "//third_party/WebKit/public:test_support",
      # "//third_party/WebKit/public:all_blink", #TODO: Fix build
      # "//tools/gn:gn_unittests",
      # "//ui/base:ui_base_unittests",
      # "//ui/compositor:compositor_unittests", # these are failing in chromium
      # "//ui/display:display_unittests",
      # "//ui/events:events_unittests",
      # "//ui/gl:gl_unittests",
      # "//url:url_unittests",
      # "//url/ipc:url_ipc_unittests",
      # "//v8/test/unittests:unittests",
    ]

    # if (is_linux) {
    #   deps += [
    #     "//net:disk_cache_memory_test",
    #     "//sandbox/linux:sandbox_linux_unittests",
    #   ]
    #
    #   if (use_dbus) {
    #     deps += [
    #       "//dbus:dbus_unittests",
    #     ]
    #   }
    # }
  }

}

static_library("pepper_flash") {
  sources = [
    "//chrome/browser/renderer_host/pepper/chrome_browser_pepper_host_factory.cc",
    "//chrome/browser/renderer_host/pepper/chrome_browser_pepper_host_factory.h",
    "//chrome/browser/renderer_host/pepper/pepper_broker_message_filter.cc",
    "//chrome/browser/renderer_host/pepper/pepper_broker_message_filter.h",
    "//chrome/browser/renderer_host/pepper/pepper_flash_browser_host.cc",
    "//chrome/browser/renderer_host/pepper/pepper_flash_browser_host.h",
    "//chrome/browser/renderer_host/pepper/pepper_flash_clipboard_message_filter.cc",
    "//chrome/browser/renderer_host/pepper/pepper_flash_clipboard_message_filter.h",
    "//chrome/browser/renderer_host/pepper/pepper_flash_drm_host.cc",
    "//chrome/browser/renderer_host/pepper/pepper_flash_drm_host.h",
    "//chrome/browser/renderer_host/pepper/pepper_isolated_file_system_message_filter.cc",
    "//chrome/browser/renderer_host/pepper/pepper_isolated_file_system_message_filter.h",
    "//chrome/renderer/pepper/chrome_renderer_pepper_host_factory.cc",
    "//chrome/renderer/pepper/chrome_renderer_pepper_host_factory.h",
    "//chrome/renderer/pepper/pepper_flash_font_file_host.cc",
    "//chrome/renderer/pepper/pepper_flash_font_file_host.h",
    "//chrome/renderer/pepper/pepper_flash_fullscreen_host.cc",
    "//chrome/renderer/pepper/pepper_flash_fullscreen_host.h",
    "//chrome/renderer/pepper/pepper_flash_drm_renderer_host.cc",
    "//chrome/renderer/pepper/pepper_flash_drm_renderer_host.h",
    "//chrome/renderer/pepper/pepper_flash_menu_host.cc",
    "//chrome/renderer/pepper/pepper_flash_menu_host.h",
    "//chrome/renderer/pepper/pepper_flash_renderer_host.cc",
    "//chrome/renderer/pepper/pepper_flash_renderer_host.h",
    "//chrome/renderer/pepper/pepper_helper.cc",
    "//chrome/renderer/pepper/pepper_helper.h",
    "//chrome/renderer/pepper/pepper_shared_memory_message_filter.cc",
    "//chrome/renderer/pepper/pepper_shared_memory_message_filter.h",
  ]
  deps = [
    "//media:media_buildflags",
    "//ppapi/host",
    "//ppapi/proxy",
    "//ppapi/proxy:ipc",
    "//ppapi/shared_impl",
    "//services/device/public/mojom",
    "//skia",
    "//third_party/adobe/flash:flapper_version_h",
    "//third_party/blink/public:blink",
  ]
  if (is_mac) {
    sources += [
      "//chrome/browser/renderer_host/pepper/monitor_finder_mac.h",
      "//chrome/browser/renderer_host/pepper/monitor_finder_mac.mm",
    ]
  }
}
