if (!defined(is_electron_build)) {
  is_electron_build = false
}

if (is_electron_build) {
  component_electron = "shared_library"
} else {
  # Due to a bug in how GN applies defaults to template targets invoked
  # via the "target" function, we cannot fall back to the "component" template.
  #
  # component_electron = "component"

  if (is_component_build) {
    component_electron = "shared_library"
  } else {
    component_electron = "source_set"
  }
}
