root_extra_deps = [ "//chromiumcontent:chromiumcontent" ]
is_component_build = false
is_debug = false
enable_nacl = false
enable_widevine = true
proprietary_codecs = false
is_component_ffmpeg = true
ffmpeg_branding = "Chromium"

# Use the system provided standard library on platforms other than Linux.
if (target_os != "linux") {
  use_custom_libcxx = false
}

# Jumbo build should improve compilation times.
# https://chromium.googlesource.com/chromium/src/+/master/docs/jumbo.md
use_jumbo_build = true
if (target_cpu == "arm64") {
  # Temporary disable on arm64 due to "error: '__' macro redefined".
  # Should be enabled back eventually.
  use_jumbo_build = false
}

# On ARM64 Linux, use system provided freetype library to prevent this build failure:
# warning: libfreetype.so.6, needed by ../../build/linux/debian_jessie_arm64-sysroot/usr/lib/aarch64-linux-gnu/libfontconfig.so, may conflict with libfreetype.so.6
if (target_cpu == "arm64") {
  use_system_freetype = true
}

# Configuration for mips64el
if (target_cpu == "mips64el") {
  is_clang = false
  use_allocator = "none"
}
