root_extra_deps = [ "//libchromiumcontent/chromiumcontent" ]
is_component_build = false
is_debug = false
enable_nacl = false
proprietary_codecs = false
is_component_ffmpeg = true
ffmpeg_branding = "Chromium"

# As of Chromium 67.0.3396.99 widevine is only supported on Mac and Windows.
if (target_os != "linux") {
  enable_widevine = true
}

# Use the system provided standard library on platforms other than Linux.
if (target_os != "linux") {
  use_custom_libcxx = false
}

# Jumbo build should improve compilation times.
# https://chromium.googlesource.com/chromium/src/+/master/docs/jumbo.md
use_jumbo_build = true

if (target_cpu == "arm64") {
  # Suppress the linking warning for arm64:
  # warning: libfreetype.so.6, needed by ../../build/linux/debian_jessie_arm64-sysroot/usr/lib/aarch64-linux-gnu/libfontconfig.so, may conflict with libfreetype.so.6
  fatal_linker_warnings = false
}

# ERROR at //chrome/installer/linux/BUILD.gn:385:7: Assertion failed.
# Linux installer not configured for this architecture.
if (target_cpu == "arm64") {
  enable_linux_installer = false
}

# Configuration for mips64el
if (target_cpu == "mips64el") {
  is_clang = false
  use_allocator = "none"
  mips_arch_variant = "loongson3"
  # Use custom sysroot image.
  use_sysroot = true
  target_sysroot = "//build/linux/debian_jessie_mips64-sysroot"
  system_libdir = "lib64"
}
